# Querybased-RAG-PDF

./: .gitignore  README.md  app.py  check_db.py  config.py  debug.py  main.py  pyproject.toml  requirements.txt  test_rag.py
backend/: requirements.txt
backend/app/: main.py
backend/app/routes/: evaluate.py  health.py  metrics.py  query.py  upload.py
backend/app/services/: evaluation_service.py  rag_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  CitationViewer.jsx  EvaluationDashboard.jsx  Loader.jsx  PDFUploader.jsx  SourceCard.jsx
frontend/src/pages/: EvaluationPage.jsx  HomePage.jsx
frontend/src/services/: api.js
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  dataset_generator.py  embedding.py  evaluator.py  image_processor.py  rag_system.py  retriever.py  vectorstore.py
