[project]
name = "querybased-pdf-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<5",
    "chromadb>=1.4.0",
    "faiss-cpu>=1.13.2",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.5.0",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.13",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
    "tabulate>=0.9.0",
]
